Fix T51118: Outliner crash when unlinking collection

The outliner tree was not being rebuilt after unlinking a collection,
and thus a dangling pointer to the collection was kept in the tree.